plugins {
    id 'java'
    id 'org.springframework.boot' version '3.4.1'
    id 'io.spring.dependency-management' version '1.1.7'
}

group = 'com.ktalk'
version = '0.0.1-SNAPSHOT'

java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(17)
    }
}

def frontendDir = file('ktalk-frontend')
def npmCommand = System.getProperty('os.name').toLowerCase().contains('windows') ? 'npm.cmd' : 'npm'

configurations {
    compileOnly {
        extendsFrom annotationProcessor
    }
}

repositories {
    mavenCentral()
}

dependencies {
    // Spring Boot Starters
    implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
    implementation 'org.springframework.boot:spring-boot-starter-data-redis'
    implementation 'org.springframework.boot:spring-boot-starter-security'
    implementation 'org.springframework.boot:spring-boot-starter-oauth2-client'
    implementation 'org.springframework.boot:spring-boot-starter-validation'
    implementation 'org.springframework.boot:spring-boot-starter-web'
    implementation 'org.springframework.boot:spring-boot-starter-webflux'
    implementation 'org.springframework.boot:spring-boot-starter-actuator'  // ✅ 추가됨!

    // .env 파일 읽기
    implementation 'io.github.cdimascio:dotenv-java:3.0.0'

    // OpenAI API 클라이언트 (ChatGPT 연동용)
    implementation 'com.theokanning.openai-gpt3-java:client:0.18.2'
    implementation 'com.theokanning.openai-gpt3-java:service:0.18.2'

    // YouTube Data API (콘텐츠 메타데이터 조회용)
    implementation 'com.google.api-client:google-api-client:2.2.0'
    implementation 'com.google.apis:google-api-services-youtube:v3-rev20230816-2.0.0'

    // JWT (인증용 - 추후 적용)
    implementation 'io.jsonwebtoken:jjwt-api:0.12.3'
    runtimeOnly 'io.jsonwebtoken:jjwt-impl:0.12.3'
    runtimeOnly 'io.jsonwebtoken:jjwt-jackson:0.12.3'

    // OkHttp (HTTP 클라이언트)
    implementation 'com.squareup.okhttp3:okhttp:4.12.0'

    // Lombok
    compileOnly 'org.projectlombok:lombok'
    annotationProcessor 'org.projectlombok:lombok'

    // Database
    runtimeOnly 'org.postgresql:postgresql'
    runtimeOnly 'com.h2database:h2' // 로컬 개발용 인메모리 DB (local 프로파일)

    // Test
    testImplementation 'org.springframework.boot:spring-boot-starter-test'
    testImplementation 'org.springframework.security:spring-security-test'
}

tasks.named('test') {
    useJUnitPlatform()
}

tasks.register('installFrontend', Exec) {
    workingDir frontendDir
    commandLine npmCommand, 'install'
    environment 'npm_config_cache', "$buildDir/npm-cache"
    inputs.file("$frontendDir/package-lock.json")
    outputs.dir("$frontendDir/node_modules")
}

tasks.register('buildFrontend', Exec) {
    dependsOn 'installFrontend'
    workingDir frontendDir
    commandLine npmCommand, 'run', 'build'
    environment 'npm_config_cache', "$buildDir/npm-cache"
    inputs.dir("$frontendDir/src")
    inputs.file("$frontendDir/package.json")
    inputs.file("$frontendDir/package-lock.json")
    outputs.dir("$frontendDir/dist")
}

tasks.register('copyFrontend', Copy) {
    dependsOn 'buildFrontend'
    from "$frontendDir/dist"
    into "$buildDir/resources/main/static"
}

tasks.named('processResources') {
    dependsOn 'copyFrontend'
}

springBoot {
    mainClass = 'com.ktalk.KtalkApplication'
}
